@@ -25,6 +25,12 @@ Release 1.4.6p2 (2013-06-xx)
 - fixed GH# 65: Poco::format() misorders sign and padding specifiers
 - upgraded bundled SQLite to 3.7.17
 - upgraded bundled zlib to 1.2.8
+- fixed a potential memory leak in Poco::Net::HTTPClientSession if it is misused 
+  (e.g., sendRequest() is sent two times in a row without an intermediate call to 
+  receiveResponse(), or by calling receiveResponse() two times in a row without 
+  an intermediate call to sendRequest()) - GH #217
+- removed a few unnecessary protected accessor methods from Poco::Net::HTTPClientSession 
+  that would provide inappropriate access to internal state
 
 
 Release 1.4.6p1 (2013-03-06)
@@ -1842,4 +1848,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.4/dist/CHANGELOG#86 $
+$Id: //poco/1.4/dist/CHANGELOG#87 $
